# just-semantic-search

./: .env.template  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  chat_agent_profiles.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build-rag-web-agent.yml  test.yml
agent/: pyproject.toml
agent/just_semantic_search/agent/: rag_agent.py
core/: README.md  pyproject.toml
core/just_semantic_search/: article_semantic_splitter.py  article_slitter.py  article_splitter.py  document.py  embeddings.py  paragraph_splitters.py  reranking.py  semanic_splitter.py  text_splitter.py  text_splitters.py
core/just_semantic_search/core/: article_semantic_splitter.py  article_slitter.py  document.py  embeddings.py  semanic_splitter.py  text_splitter.py
core/just_semantic_search/remote/: jina.py
core/just_semantic_search/splitters/: abstract_splitters.py  paragraph_splitters.py  splitter_factory.py  structural_splitters.py  text_splitters.py
core/just_semantic_search/utils/: logs.py  remote.py
data/: .gitignore
data.ms/auth/: data.mdb  lock.mdb
data.ms/indexes/0278358d-6c11-4a83-94b3-65a630e4c232/: data.mdb  lock.mdb
data.ms/indexes/5fb5ad0b-6d0e-48b5-912c-4667acf8b70a/: lock.mdb
data.ms/tasks/: data.mdb  lock.mdb
data/glucose_markdown/: 2014-The UVA-PADOVA Type 1 Diabetes Simulator.md  2017-Managing diabetes_ Pattern discovery and counselling supported by user data in a mobile platform.md  2017-SugarMate_ Non-intrusive Blood Glucose Monitoring with Smartphones.md  2017-Using LSTMs to learn physiological models of blood glucose behavior.md  2018-A Deep Learning Algorithm for Personalized Blood Glucose Prediction.md  2018-Convolutional Recurrent Neural Networks for Glucose Prediction.md  2018-The UVA-Padova Type 1 Diabetes Simulator Goes From Single Meal to Single Day.md  2019-Development of a Deep Learning Model for Dynamic Forecasting of Blood Glucose Level for Type 2 Diabetes Mellitus_ Secondary Analysis of a Randomized Controlled Trial.md  2019-Predicting the meal macronutrient composition from continuous glucose monitors.md  2020-A Personalized and Interpretable Deep Learning Based Approach to Predict Blood Glucose Concentration in Type 1 Diabetes.md  2020-Adversarial Multi-Source Transfer Learning in Healthcare_ Application to Glucose Prediction for Diabetic People.md  2020-Deep Physiological Model for Blood Glucose Prediction in T1DM Patients.md  2020-GluNet__A_Deep_Learning_Framework_For_Accurate_Blood_Glucose_Forecasting.md  2021-A Function Approximation Approach to the Prediction of Blood Glucose Levels.md  2021-Artificial Flora Algorithm-Based Feature Selection with Gradient Boosted Tree Model for Diabetes Classification.md  2021-Deep Learning in mHealth for Cardiovascular Disease, Diabetes, and Cancer_ Systematic Review.md  2021-Patient-Generated Data Analytics of Health Behaviors of People Living With Type 2 Diabetes_ Scoping Review.md  2022-Predicting Blood Glucose Concentration after Short-Acting Insulin Injection Using Discontinuous Injection Records.md  2022-Research progress on wearable devices for daily human health management.md  2023-Comparative Analysis of Predictive Interstitial Glucose Level Classification Models.md  2023-Developing the UVA-Padova Type 1 Diabetes Simulator_ Modeling, Validation, Refinements, and Utility.md  2023-Improving the Accuracy of Continuous Blood Glucose Measurement Using Personalized Calibration and Machine Learning.md  2023-Situational Awareness and Proactive Engagement Predict Higher Time in Range in Adolescents and Young Adults Using Hybrid Closed-Loop.md  2024-A Multitask VAE for Time Series Preprocessing and Prediction of Blood Glucose Level.md  2024-Enhanced blood glucose levels prediction with a smartwatch.md  A_generative_pretrained transformer model_Yong_Wang.md  Continuous Glucose Monitoring in Healthy Adults—Possible Applications in Health Care, Wellness, and Sports.md  Continuous glucose monitoring understanding the post-prandial.md  Effects of Variability in Glycemic Indices on Longevity in Chinese Centenarians.md  GLUCOBENCH- RENAT.md  GLUFORMER 2-From Glucose Patterns to Health Outcomes A Generalizable Foundation Model for Continuous Glucose Monitor Data Analysis.md  Glucobench-Table 1.md  Glucobench-Table 2.md  Glucobench-Table 3.md  Glycaemic variability, assessed with continuous.md  assesing the shape of the glucose curve during oral glucose tolerance.md  glucobench_RENAT_curated_list_of_con.md
just_semantic_search/meili/: index.py
meili/: docker-compose.yml  pyproject.toml
meili/just_semantic_search/meili/: index.py  meili_exec.py  rag.py  tools.py
meili/just_semantic_search/meili/utils/: services.py
meili/models.d/: 02_ChatUIAgent_config.json
scholar/: pyproject.toml
scholar/just_semantic_search/scholar/: old  papers.py  paperset.py  viz.py
server/: .env.template  Dockerfile  pyproject.toml  run_just_server.py  tools.py
server/containers/rag-chat/: Dockerfile  requirements.txt
server/containers/rag-server/: Dockerfile  build.sh  chat_agent_profiles.yaml  init.py  pyproject.t__l  pyproject.toml.template  reproduce.sh  requirements.txt  test.sh
server/just_semantic_search/server/: agentic_indexing.py  index_markdown.py  indexing.py  rag_server.py
services/meili/: docker-compose.yaml
services/opensearch/: docker-compose.yml
test/: manual.py
test/core/: manual.py
test/meili/: manual.py  test_cases.py  utils.py
tests/: config.py
tests/meili/: functions.py  manual.py  test_cases.py  utils.py
tests/splitters/: manual.py
