[tool.poetry]
name = "just-semantic-search-all"
version = "0.0.0"
package-mode = false
description = "Semantic search implementation with hybrid search support and multiple backends"
authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = []  # No packages at root level, using namespace packages
keywords = ["python", "llm", "science", "review", "hybrid search", "semantic search", "search", "vector search", "hybrid search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
just-semantic-search = { path = "core", develop = true }
just-semantic-search-meili = { path = "meili", develop = true }
pyfunctional = ">=1.5.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
click = "*"
pycomfort = ">=0.0.15"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"