[tool.poetry]
name = "just-semantic-search-all"
version = "0.0.0"
package-mode = false
description = "Semantic search implementation with hybrid search support and multiple backends"
authors = [
    "Alex Karmazin <karmazinalex@gmail.com>",
    "Anton Kulaga <antonkulaga@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "tests"}
]
keywords = ["python", "llm", "science", "review", "hybrid search", "semantic search", "search", "vector search", "hybrid search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.scripts]
meili-exec = "just_semantic_search.meili.meili_exec:app"
index-markdown = "just_semantic_search.agent.index_markdown:app"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
just-semantic-search = { path = "./core", develop = true }
just-semantic-search-meili = { path = "./meili", develop = true }
just-semantic-search-scholar = { path = "./scholar", develop = true }
just-semantic-search-agent = { path = "./agent", develop = true }
pyfunctional = ">=1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pycomfort = ">=0.0.17"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]