[tool.poetry]
name = "just-semantic-search"
version = "0.0.0"
description = "Core interfaces for hybrid search implementations"
authors = ["Anton Kulaga <antonkulaga@gmail.com>", "Alex Karmazin <karmazinalex@gmail.com>", "Newton Winter <isoutthere@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "just_semantic_search"}]
keywords = ["python", "llm", "science", "review", "hybrid search", "semantic search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
transformers = ">=4.49.0"
sentence-transformers = ">=3.3.1"
typer = "*"
pydantic = ">=2.10.3"
scikit-learn = ">=1.5.2"
einops = ">=0.8.0"
eliot = ">=1.16.0"
eliot-tree = ">=24.0.0"

# Conditional dependencies with exclusive markers
torch = [
    { version = "2.6.0", source = "torch-cpu", markers = "extra == 'cpu' and extra != 'gpu'" },
    { version = "2.6.0+cu124", source = "torch-gpu", markers = "extra == 'gpu' and extra != 'cpu'" }
]
optimum = { version = ">=1.16.1", optional = true }
flash-attn = { version = ">=2.7.3", optional = true }
triton = { version = ">=2.3.0", optional = true }

[tool.poetry.extras]
cpu = ["optimum"]
gpu = ["flash-attn", "triton"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.4.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"
format-jinja = "{{base}}"
