[tool.poetry]
name = "just-semantic-search-meili"
version = "0.0.1"
description = "Semantic and hybrid search with meilisearch"
authors = ["Anton Kulaga <antonkulaga@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["python", "llm", "science", "review", "hybrid search", "semantic search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

packages = [
    { include = "just_semantic_search" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
transformers = ">=4.44.2"
meilisearch = ">=0.33.0"
triton = "*"
sentence-transformers = "*"
typer = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 